# cyclonedx-buildroot

./: .gitignore  .mypy.ini  CONTRIBUTING.md  Python.gitignore  README.md  __init__.py  generateBuildrootSBOM.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: codeql.yml  python.yml  release.yml
cyclonedx_buildroot/: __init__.py  __main__.py
cyclonedx_buildroot/_internal/: __init__.py  cli.py
docs/: requirements.txt
pypi/: pypi_instructions.txt
tests/: __init__.py  manifest.csv  raspi_cpe_data_pp.json  raspi_manifest.csv  requirements.txt  setup.py  test_generateBuildrootSBOM.py  test_integration.py  test_unit.py  unit_tests.py
tests/_data/: cpe_data_pp.json  cpe_data_show_pkg_stats.json  manifest_simple.csv
