[tool.poetry]
name = "CycloneDX-Buildroot"
version = "1.1.0"
description = "Create a software bill of materials from the direct dependencies of a Buildroot generated project"
authors = ["Robert Smigielski <ptdropper@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "cyclonedx_buildroot" },
]
include = [
    # all is an object -> prevent parse issue with dependabot
    { path="README.md", format =["sdist"] },
    { path="tests", format=["sdist"] },
    # { path="CHANGELOG.md", format=["sdist"] },
    # { path="docs", format=["sdist"] },
]
exclude = [
    "**/.*", # exclude dotfiles and dotfolders
    "docs/_build", "docs/processes",
]

[tool.poetry.scripts]
generateBuildrootSBOM = "cyclonedx_buildroot._internal.cli:run"

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
packageurl-python = "0.14.0"
cyclonedx-python-lib = "8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
